--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,6 @@
 # BlueJ files
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -19,5 +16,14 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# maven ignore
+target/
+# system ignore
+.DS_Store
+Thumbs.db
+# idea ignore
+.idea/
+*.ipr
+*.iml
+*.iws
+
